--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: 'Rubik';
+    src: url('/fonts/Rubik-VariableFont_wght.woff2') format('woff2'); 
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+  } 
+}
+
+
+* {
+  font-family: 'Rubik'
+}
+
 html,
 body {
   padding: 0;
@@ -20,3 +35,33 @@ a {
   box-sizing: border-box;
 }
 
+.pagination-btn {
+  width: 100%;
+  height: 40px;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #6A4029;
+  margin-top: 30px;
+}
+
+.pagination-btn a {
+  padding: 5px 10px;
+  margin: 8px;
+  border-radius: 5px;
+  border: 1px solid #6A4029;
+  color: #6A4029;
+  text-decoration: none;
+  cursor: pointer; 
+}
+
+.pagination-btn a:hover {
+  color: #FFBA33 !important;
+  background-color: #6A4029;
+}
+
+.pagination-active a {
+  color: #FFBA33 !important;
+  background-color: #6A4029;
+}
